--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@heroicons/react": "v1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
     "firebase": "^9.6.10",
     "framer-motion": "^6.2.8",
+    "heroicons": "^2.0.13",
     "ionic": "^5.4.16",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
